--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,18 @@
 	shallow = true
 	branch = master
 	registered = true
+[submodule "hugodown"]
+	path = hugodown
+	url = https://github.com/r-lib/hugodown
+	shallow = true
+	registered = false
+[submodule "slugify"]
+	path = slugify
+	url = https://github.com/hrbrmstr/slugify
+	shallow = true
+	registered = false
+[submodule "vcr"]
+	path = vcr
+	url = https://github.com/ropensci/vcr
+	shallow = true
+	registered = false
